# niccc

./: CMakeLists.txt  README.md  add_feature.prompt  grammar.txt  input.txt  mips.txt  output.txt  simple_test.txt  test-simple.txt  testfile.txt  testfile_backup.txt
include/: ast.hpp  common.hpp  ir.hpp  ir_generator.hpp  mips_code_generator.hpp  parser.hpp  surakarta_event.hpp  symbol_table.hpp  tokenizer.hpp  tokenizer_spec.hpp
src/: ir_generator.cpp  main.cpp  mips_code_generator.cpp  parser_spec.cpp  source_printer.cpp  tokenizer_spec.cpp
